# python-pptx-snippets

./: README.md  example.py  main.py  mkdocs.yml  pyproject.toml  snippets.py
.github/workflows/: docs.yml
__marimo__/session/: main.py.json
docs/: index.md
site/: 404.html  index.html  objects.inv  search.json
